[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dedupe-cli"
version = "0.1.0"
description = "A small CLI for removing duplicate lines from text input"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Vassili Patrikis" }]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
dedupe = "dedupe:main"

[tool.setuptools]
py-modules = ["dedupe"]
